--- a/test/index.html
+++ b/test/index.html
@@ -6,9 +6,8 @@
     <title>Test index</title>
 </head>
 <body>
-<script src="../lib/m4q.js"></script>
-
-<script>
+<script type="module">
+    import { $ } from "../dist/dom.js";
     $.info();
     console.log($.viewport())
 </script>
