--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,8 @@
 <script type="module">
     import { $ } from "../dist/dom.js";
     $.info();
-    console.log($.viewport())
+    $(() => {
+        console.log($("html").attr("lang"))
+    })
 </script>
 </body>
